--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 header {
 	display: flex;
 	justify-content: space-between;
-	background-color: rgb(243, 196, 157);
+	background-color: rgb(9, 122, 204);
 	padding: 8px 0 10px 0;
 	z-index: 9999;
 }
@@ -91,6 +91,7 @@ header nav a:hover::before {
 	border-bottom: 3px solid rgb(var(--secondary-color));
 }
 
+
 .image-section {
 	position: relative;
 	margin: 0px 0px 30px 0;
@@ -123,30 +124,98 @@ main {
 	padding: 10px 50px;
 }
 
+.image1{
+	width: 100%;
+	height: 20vh;
+	background-size: cover;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	opacity: 0.5;
+	position: absolute;
+    z-index: -1;}
+	
+	
+
+.image2{
+	
+	width: 75px;
+	position: relative;
+	left: 20px;
+	border-radius: 34.5px;
+	align-items: center;
+	top: 100px;
+	flex-wrap: wrap;
+	
+	
+	border: 2px solid;
+	display: flex;
+	z-index: -1;
+
+
+	
+}
+.title{
+	color:rgb(2, 44, 61); 
+	font-size: 35px;
+	margin-left: 100px;
+	flex-wrap: wrap;
+	display: flex;
+
+}
+.about{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 20px 50px;
+	width: 90%;
+	align-items:center
+	
+	
+}
+.flex-row{
+	display: flex;
+	justify-content: left;
+}
+
+
+
+
+
+
 .About-section {
 	display: flex;
 	flex-wrap: wrap;
 	padding: 20px 10px;
 	width: 100%;
 	justify-content: space-between;
-	margin: 30px 0px;
+	margin: 30px 50px;
+	margin-top: 100px;
 }
 
 .section-title {
 	font-size: 30px;
 	text-align: right;
-	width: 20%;
+	width: 100%;
 	border-right: 5px solid;
-	padding: 10px;
+	padding: 30px;
+	margin-left: 35px;
+	
+}
+.section-text{
+	margin-left: 50px;
 }
 
 .about-section p {
 	margin: 10px;
 	line-height: 2;
+	
 }
 .about-section .para {
-	margin: 10px;
+	margin-left: 60px;
 	width: 75%;
+	
+
 }
 
 .work-section {
@@ -156,6 +225,7 @@ main {
 	width: 100%;
 	justify-content: space-between;
 	margin: 30px 0px;
+	margin-top: 40px;
 }
 
 .projects {
